src/components/Menu/menu.scss
@import '../../bootstrap/variables.scss';

.top-bar {
  display: flex;
  align-items: center;
  position: sticky;
  height: 2.7rem;
  background-color: $secondary;
  z-index: 700;
}

.menu-button {
  margin-left: 0.5rem;
  display: flex;
  align-items: center;
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  background-color: $primary;
}

.menu-svg {
  display: block;
  margin: 0 auto;
  width: 65%;
  height: 65%;
  fill: $light;
}

@media (max-width: 768px) {
  .top-bar {
    height: 4rem;
  }
  .menu-button {
    width: 3rem;
    height: 3rem;
  }
}

